--- a/src/app.css
+++ b/src/app.css
@@ -3,6 +3,6 @@
 @tailwind utilities;
 @layer base {
 	html {
-		font-family: 'Nunito Sans', sans-serif;
+		font-family: 'Roboto', sans-serif;
 	}
 }
